import com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'io.freefair.lombok' version '8.4'
}

repositories {
    mavenCentral()
}

group 'cn.nukkit'
version '1.0-SNAPSHOT'

dependencies {
    implementation 'org.fusesource.jansi:jansi:2.4.1'
    implementation 'com.google.guava:guava:32.1.3-jre'
    implementation 'com.github.oshi:oshi-core:6.4.6'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.yaml:snakeyaml:2.2'

    implementation('net.minecrell:terminalconsoleappender:1.3.0') {
        exclude(group: 'org.jline', module: 'jline-reader')
        exclude(group: 'org.apache.logging.log4j', module: 'log4j-core')
    }

    implementation 'org.jline:jline:3.25.0'

    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.22.1'

    annotationProcessor('org.apache.logging.log4j:log4j-core:3.0.0-alpha1')

    implementation 'net.sf.jopt-simple:jopt-simple:6.0-alpha-3'
    implementation 'org.iq80.leveldb:leveldb:0.12'
    implementation 'io.netty:netty-all:4.1.100.Final'
    implementation 'org.apache.commons:commons-lang3:3.13.0'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

shadowJar {
    transform(Log4j2PluginsCacheFileTransformer)
    manifest {
        attributes 'Main-Class': 'cn.nukkit.Nukkit', 'Multi-Release': 'true', 'Implementation-Title': 'Carrot', 'Implementation-Version': archiveVersion
    }
}